@@ -1,5 +1,7 @@
 # RCSB_UTILS_IO HISTORY
 
 25-Aug-2018  - Split off from py-rcsb_db
-26-Aug-2018. - Tweak testing configuration
+26-Aug-2018  - V0.11 Tweak testing configuration
+06-Oct-2018  - V0.12 Add convenience methods to IoUtils()
+
 
